--- a/css/drown_landscape.css
+++ b/css/drown_landscape.css
@@ -56,8 +56,8 @@
         /* max-height: 100%; */
         /* max-height: calc(100% - 3rem - 36px); */
         /* max-height: calc(100% - 0px); */
-        /* overflow-y: scroll;
-        scrollbar-width: none; */
+        overflow-y: scroll;
+        scrollbar-width: none;
     }
 
     #info-title {
